tests/modules/errors/undefined_export.nfu
let defined = 42;

export undefined;
